# LLM-Memory-API

./: .gitignore  README.md  main.py  pyproject.toml
app/configs/embedding/: __init__.py  base.py
app/embedding/: base.py  openai_embedding.py
app/memory/: base.py
app/models/: models.py
app/utils/: factory.py
